# varkit

./: .gitignore  .wslconfig  CNAME  README.md  dockerfile  environment.yml  export_distro.sh  pixi.toml  pyproject.toml
.github/workflows/: static.yaml
docs/: index.html
example/: input.yaml  parameter.yaml
export/: export_distro.sh  install_distro.bat
reference_preparation/: build_reference.sh  download_reference.py
site/: index.html  package-lock.json  style.css
site/src/: main.jsx
site/src/components/: Dropdown.jsx  Dropdown_1.jsx  Footer.jsx  Header.jsx  HeaderNavigation.jsx  Logo.jsx
site/src/styles/: App.scss  _Dropdown.scss  _Header.scss  _HeaderNavigation.scss
src/: main.py  varkit.config.toml
src/config/: varkit.config.toml
src/modules/: header.py
src/modules/flow/: downstream_processing_flow.py  mapping_and_alignment_flow.py  post_mapping_and_alignment_flow.py  post_variant_calling_flow.py  reporting_flow.py  upstream_processing_flow.py  variant_annotation_flow.py  variant_calling_flow.py
src/modules/flows/: upstream_processing_flow.py
src/modules/functions/annotaion/: __init__.py  annotate_variants_snpeff_and_snpsift.py
src/modules/utils/: check_index_file.py  detect_platform.py  log.py  logger.py  sanitization.py  sanitize.py  setup_logger.py  setup_logging.py  translate_path.py
src/pipelines/: default_pipeline.py
src/reference_preparation/: build_reference.sh  download_reference.py  download_reference.sh
test/: test.py  test.sh
wslconfig/: oobe.sh  wsl-distribution.conf  wsl.conf
(+62 files in other folders)
